# gloo

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
daiet/: .gitignore  DaietContext.cpp  DaietContext.hpp  Makefile  MemBlock.hpp  PsMsgs.hpp  README.md  colocated.cfg  common.cpp  common.hpp  daiet.cfg  daiet.cpp  daiet.hpp  dpdk-config.sh  dpdk.h  params.cpp  params.hpp  ps.cpp  utils.cpp  utils.hpp  worker.cpp  worker.hpp
daiet/dpdk/examples/helloworld-cpp/: Makefile  c_code.c  c_header.h
daiet/dpdk/mk/internal/: rte.compile-pre.mk
daiet/dpdk/mk/toolchain/icc/: rte.vars.mk
daiet/dpdk/x86_64-native-linuxapp-gcc/app/: dpdk-pmdinfogen
daiet/dpdk/x86_64-native-linuxapp-gcc/kmod/: igb_uio.ko
daiet/example/: .gitignore  CMakeLists.txt  Makefile  daiet.cfg  example.cpp  example1.cpp  main.cc
daiet/lib/dpdk/: cpp_support.patch
daiet/lib/dpdk/config/: common_base
daiet/lib/dpdk/examples/helloworld-cpp/: cpp_code.cpp
daiet/lib/dpdk/mk/: rte.extapp.mk  rte.extlib.mk
daiet/lib/dpdk/mk/toolchain/gcc/: rte.vars.mk
daiet/ps/: Makefile
daiet/ps/src/: main.cpp  msgs.h  params.cpp  params.hpp  ps.cpp  utils.cpp
daiet/scripts/: build_all.sh  dpdk-config.sh
daiet/src/: DaietContext.cpp  DaietContext.hpp  common.cpp  common.hpp  converter.cpp  converter.hpp  daiet.cpp  daiet.hpp  dpdk.h  fdir.cpp  fdir.hpp  msgs.h  params.cpp  params.hpp  ps.cpp  ps.hpp  stats.cpp  stats.hpp  utils.cpp  utils.hpp  worker.cpp  worker.hpp
experiments/exp1/: CMakeLists.txt  common.h  exp1.cc  main.cc  test1.cc
experiments/exp2/: CMakeLists.txt  float16.cc  float32.cc  int32.cc  main.cc
gloo/: CMakeLists.txt  allreduce_bcube.h  allreduce_halving_doubling.h  allreduce_ring.h  allreduce_ring_chunked.h  config.h.in  context.cc  context.h  cuda_allreduce_bcube.cc  cuda_allreduce_halving_doubling.cc  cuda_allreduce_ring.cc  cuda_allreduce_ring_chunked.cc  math.cc
gloo/daiet/: DaietContext.cc  DaietContext.hpp  Makefile  MsgBase.hpp  colocated.cfg  common.cpp  daiet.cfg  daiet.cpp  daiet.hpp  no-daiet.cfg  params.cpp  params.hpp  ps.hpp  utils.cpp  utils.hpp  worker.cpp  worker.hpp
gloo/daiet/dpdk/: helloworld_cpp.patch
gloo/daiet/dpdk/examples/: Makefile
gloo/daiet/dpdk/mk/toolchain/gcc/: rte.vars.mk
gloo/examples/: CMakeLists.txt  example1.cc
gloo/rendezvous/: context.h
