cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fPIC -O3 -DNDEBUG")
add_definitions("-DHIREDIS_NESTED_INCLUDE")
link_directories(${CMAKE_SOURCE_DIR}/../../build/gloo/)
include_directories(${CMAKE_SOURCE_DIR}/../../build)
include_directories(${CMAKE_SOURCE_DIR}/../../)
add_executable(float16 float16.cc)
target_link_libraries(float16 gloo hiredis pthread -Wl,--whole-archive daiet dpdk -Wl,--no-whole-archive dl numa boost_chrono boost_system boost_thread boost_program_options)
add_executable(float32 float32.cc)
target_link_libraries(float32 gloo hiredis pthread -Wl,--whole-archive daiet dpdk -Wl,--no-whole-archive dl numa boost_chrono boost_system boost_thread boost_program_options)
add_executable(int32 int32.cc)
target_link_libraries(int32 gloo hiredis pthread -Wl,--whole-archive daiet dpdk -Wl,--no-whole-archive dl numa boost_chrono boost_system boost_thread boost_program_options)